<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Ubique Innovation AG <https://www.ubique.ch>
  ~
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  ~
  ~ SPDX-License-Identifier: MPL-2.0
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_barrier_gestures"
        android:enabled="true"
        android:icon="@drawable/ic_barrier_gesture"
        android:title="@string/tab_barrier_gesture" />
    <item
        android:id="@+id/action_handshakes"
        android:enabled="true"
        android:icon="@drawable/ic_protection"
        android:title="@string/tab_protection" />
    <item
        android:id="@+id/action_activities"
        android:enabled="true"
        android:icon="@drawable/ic_activities"
        android:title="@string/tab_activities" />
</menu>